--- a/02/StaticProfile/index.html
+++ b/02/StaticProfile/index.html
@@ -1,4 +1,3 @@
-~
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +8,7 @@
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="style.css" rel="stylesheet">
+    <link href="/static/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,9 +16,16 @@
         <div class="row m-3 p-5">
 
             <div class="col-md">
-                <h1>Iron Man</h1>
-                <p>Identity: Tony Stark</p>
-                <h2>Superpowers</h2>
+                <h1>About Mee</h1>
+                <p>I am Maxwell Seybert</p>
+                <ul>
+                    <li>Applied Mathematics Major at UNC</li>
+                    <li>Computer information Systems minor</li>
+                    <li>Love math and programming</li>
+                    <li>Enjoy going to the gym</li>
+                    <li>Enjoy playing basketball</li>
+                    <li>Enjoy playing video games</li>
+                </ul>
                 <p>Billionaire Entrepreneur</p>
                 <p>Arms Dealer</p>
                 <p>High Tech Armor</p>
@@ -34,7 +40,7 @@
             </div>
 
             <div class="col-md">
-                <img src="images/iron_man.jpg" alt="Iron Man" width="500">
+                <img src="/static/images/PicOfMeInMacys.JPG" alt="PicOfMeInMacys" width="250">
             </div>
 
         </div>
